apps/qbittorrent/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/ephemeral/qbittorrent/config"
            server: 10.10.10.10
        - name: data
          nfs:
            path: "/k8s-volumes/ephemeral/qbittorrent/data"
            server: 10.10.10.10
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:4.5.2
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          ports:
            - containerPort: 8080
            - containerPort: 53957
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 53957
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 53957
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: data
              mountPath: /downloads
              readOnly: false
