apps/qbittorrent/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  serviceName: qbittorrent
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/qbittorrent/config"
            server: 10.10.20.10
        - name: data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/qbittorrent/data"
            server: 10.10.20.10
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.4-r0-ls427@sha256:9752b4f8300d19e9d9157ea400d9d95547365ac0379cbf82cdff477b59b7f264
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
          ports:
            - containerPort: 8080
            - containerPort: 53957
          imagePullPolicy: IfNotPresent
          startupProbe:
            tcpSocket:
              port: 53957
            failureThreshold: 120
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 53957
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: data
              mountPath: /downloads
              readOnly: false
