apps/qbittorrent/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.162
  selector:
    app: qbittorrent
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: traffic-tcp
      protocol: TCP
      port: 53957
      targetPort: 53957
    - name: traffic-udp
      protocol: UDP
      port: 53957
      targetPort: 53957
