apps/qbittorrent/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-classic-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - qbittorrent.nahue.ar
      secretName: qbittorrent
  rules:
    - host: qbittorrent.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
